Extend package info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 links = "wavm"
 build = "build.rs"
 edition = "2021"
+license = "Apache-2.0"
+description = "WAVM (WebAssembly Virtual Machine) C API bindings for Rust."
+
+
 [dependencies]
 libc = "0.2.126"
