--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libwavm-sys"
-version = "0.1.0"
-links = "wavm"
+version = "0.1.1"
+links = "WAVM"
 build = "build.rs"
 edition = "2021"
 license = "Apache-2.0"
