--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/heviat/libwavm-sys"
 categories = [ "external-ffi-bindings" ]
 keywords = [ "wavm", "webassembly" ]
 exclude = [ ".cargo/config.toml" ]
-
+readme = "README.md"
 
 [dependencies]
 libc = "0.2.126"
